fix focus visible

--- a/gkit/src/components/textArea/style.less
+++ b/gkit/src/components/textArea/style.less
@@ -29,7 +29,7 @@
   }
 
   &.focus,
-  &:focus-visible {
+  &:focus-within {
     .pseudo-element-with-border();
   }
 
