--- a/gkit/src/components/textField/style.less
+++ b/gkit/src/components/textField/style.less
@@ -55,7 +55,7 @@
     }
 
     &.focus,
-    &:focus-visible {
+    &:focus-within {
       .pseudo-element-with-border();
     }
 
